added new endpoints aswell as keycloak access token into backend